# arcasadeveloping-bgapp

./: .cursorrules  .encryption_key  .env  .gitignore  .master.key  .pre-commit-config.yaml  ADMIN_API_CORRIGIDA_BATMAN_ROBIN.md  ADMIN_DASHBOARD_RECOVERY_REPORT.md  ADMIN_DEV_GUIDE.md  ADMIN_ENHANCED_STYLING_REPORT.md  ADMIN_ERRO_404_SERVICES_RESOLVIDO.md  ADMIN_NOVAS_FUNCIONALIDADES_2025.md  ADMIN_PAGE_UPDATED.md  ANALISE_TECNICA_DETALHADA_BGAPP_2025.md  ARQUITETURA_BGAPP.md  AUDITORIA_ADMIN_CORRECOES_COMPLETA.md  AUDITORIA_COMPLETA_DEBUG_PLAN.md  AUDITORIA_COMPLETA_LOCALHOST_PROBLEMAS_ROBIN_BATMAN.md  AUDITORIA_DEBUG_CONTENCAO_FINAL.md  AUDITORIA_FRONTEND_INDEX_HTML.md  AUDITORIA_MIGRACAO_NEXTJS.md  AUDITORIA_UI_UX_UBIQUITI_MELHORIAS_2025.md  AUDIT_REPORT_BGAPP_2025.md  BACKGROUND_AGENT_STATUS.md  BACKGROUND_AGENT_TASKS.md  BATMAN_ROBIN_HOUSTON_PROBLEMA_RESOLVIDO.md  BGAPP-CARTO-Complete-Integration.json  BGAPP-Development-Environment.json  BGAPP-Postman-Environment.json  BGAPP_ENHANCED_V1.2.0_FEATURES.md  BGAPP_WIND_ANIMATION_SYSTEM_COMPLETE.md  BGAPP_WIND_OPTIMIZATION_REPORT.md  CHANGELOG_ADMIN.md  CONTROLES_CAMADAS_FUNCIONAIS_IMPLEMENTADOS.md  COPYRIGHT.md  CORRECAO_COMPLETA_TODOS_MARCADORES_ZEE.md  CORRECAO_FINAL_TODOS_PONTOS_ZEE_RESOLVIDA.md  CORRECAO_STAC_CLOUDFLARE_ARQUITETURA.md  CORRECAO_TOGGLE_PANEL_REALTIME_ANGOLA.md  CORRECAO_VISIBILIDADE_PARTICULAS_FINAL.md  (+148 more)
_organization/temp/audit_backup_20250903_231217/: .prettierrc  CODE_AUDIT_REPORT_20250903_225504.md  CODE_AUDIT_REPORT_20250903_231217.md  DEPLOY_REPORT_20250903_225255.md  DEPLOY_REPORT_20250903_225324.md  Dockerfile  MAINTENANCE_REPORT_20250903.md  SAFE_ORGANIZATION_REPORT.md  _redirects  admin.html.backup.20250902_011744  admin_dashboard_controller.py  aoi_precise.geojson  aoi_precise_zee.geojson  api-worker.js  bgapp-enhanced-demo.html  bgapp-wind-animation-demo.html  bgapp_system.yaml  docker-compose.yml  fishing_all_infrastructure_angola.geojson  fishing_infrastructure_angola.geojson  fishing_villages_angola.geojson  health_check_report_20250903_224819.md  index-apple-design.html  keycloak-worker.js  next.config.js  scheduler.py  (+18 more)
(+1394 files in other folders)
