[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bgapp"
version = "0.1.0"
description = "Plataforma open source para biomassa, migração e ordenamento com OGC/STAC"
authors = [{ name = "BGAPP" }]
requires-python = ">=3.10"
readme = "README.md"
keywords = ["geospatial", "OGC", "STAC", "biomass", "biodiversity", "oceanography"]

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
  "mypy>=1.10",
  "pre-commit>=3.7",
]
ingest = [
  "requests>=2.32",
  "erddapy>=2.2",
  "copernicus-marine>=1.2.3",
  "cdsapi>=0.6.1",
  "openeo>=0.25.0",
]
geo = [
  "xarray>=2024.3.0",
  "rioxarray>=0.15.5",
  "rasterio>=1.3.10",
  "geopandas>=0.14.4",
  "shapely>=2.0.4",
  "pyproj>=3.6.1",
  "scikit-learn>=1.3.0",
]
api = [
  "pygeoapi>=0.17.0",
]
orchestration = [
  "prefect>=2.16.0",
]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
strict_optional = true
packages = ["bgapp"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[project.scripts]
obis = "bgapp.ingest.obis:main"
cmems = "bgapp.ingest.cmems_chla:main"
modis = "bgapp.ingest.modis_ndvi:main"
