[package]
name = "bgapp-deckgl-wasm"
version = "0.1.0"
edition = "2021"
authors = ["BGAPP Team <bgapp@maredatum.com>"]
description = "WebAssembly wrapper for Deck.GL integration in BGAPP"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "WebGlRenderingContext",
    "Window",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1"

[profile.release]
# Otimizações para tamanho menor
opt-level = "z"
lto = true
codegen-units = 1